be consistent with .RData not .Rdata
git-svn-id: https://svn.r-project.org/R/trunk@52286 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -3103,13 +3103,13 @@ load(file, envir = parent.frame())
 @}
 \examples@{
 ## save all data
-save(list = ls(), file= "all.Rdata")
+save(list = ls(), file= "all.RData")
 
 ## restore the saved values to the current environment
-load("all.Rdata")
+load("all.RData")
 
 ## restore the saved values to the workspace
-load("all.Rdata", .GlobalEnv)
+load("all.RData", .GlobalEnv)
 @}
 \keyword@{file@}
 @end smallexample
