added some more features for working with raster objects
git-svn-id: https://svn.r-project.org/R/trunk@52314 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -191,6 +191,10 @@ NEW FEATURES
 
     o	legend() supports 'title.adj' (Wish of PR#13415)
 
+    o   Added support for subsetting "raster" objects, plus assigning
+        to a subset, conversion to a matrix (of colour strings), and
+        comparisons (== and !=).
+
 
 DEPRECATED & DEFUNCT
 
