--- a/NEWS
+++ b/NEWS
@@ -21,7 +21,10 @@ BUG FIXES
     o	R CMD Rd2dvi failed if run from a path containing space(s).
 	This also affected R CMD check, which calls Rd2dvi.
 
-    o	stripchart() could fail with an empty factor level. (PR#14317) 
+    o	stripchart() could fail with an empty factor level. (PR#14317)
+
+    o	Text help rendering of \tabular{} has been improved: under
+ 	some circumstances leading blank columns were not rendered.
 
 
 
